ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventrack-ingress
  namespace: inventrack-prod
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - host: conjunta3p.espe.edu.ec
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
